Fix overflow styles

--- a/components/autosuggest-search/styles.scss
+++ b/components/autosuggest-search/styles.scss
@@ -106,7 +106,7 @@
       border-bottom-right-radius: 4px;
       z-index: 2;
       max-height: 193px;
-      overflow-y: scroll;
+      overflow-y: auto;
     }
   }
 
